@@ -1,12 +1,7 @@
 {
-  "count": 4,
-  "uniques": 3,
+  "count": 2,
+  "uniques": 2,
   "clones": [
-    {
-      "timestamp": "2023-10-10T00:00:00Z",
-      "count": 2,
-      "uniques": 1
-    },
     {
       "timestamp": "2023-10-13T00:00:00Z",
       "count": 1,
